@@ -15,6 +15,7 @@ h3. 0.6.1 unreleased
 * add '2 Col Portfolio' theme from startbootstrap.com
 * add '3 Col Portfolio' theme from startbootstrap.com
 * add '4 Col Portfolio' theme from startbootstrap.com
+* add 'Modern Business' theme from startbootstrap.com
 
 h3. 0.6.0 May 10, 2015
 
